Update 'tdvnl5q3y-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:1b8f6830d03a712ccc7a6920578328b01b6c9aa9@sha256:badaee3e7e1d824ad6cb90435aeed89debb9e50de215446ea11ed4922ae43492

--- a/components/tdvnl5q3y-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/tdvnl5q3y-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tdvnl5q3y-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:1b8f6830d03a712ccc7a6920578328b01b6c9aa9@sha256:badaee3e7e1d824ad6cb90435aeed89debb9e50de215446ea11ed4922ae43492
+          name: container-image
